[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/fray/editor/input_map/input_inspectors/input_inspector.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/fray/editor/input_map/input_inspectors/key_inspector.gd" type="Script" id=2]
[ext_resource path="res://addons/fray/assets/styles/editor_property.tres" type="StyleBox" id=3]

[node name="KeyInspector" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ButtonProperty" type="HBoxContainer" parent="ScrollContainer/PropertyContainer" index="0"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ScrollContainer/PropertyContainer/ButtonProperty" index="0"]
margin_top = 5.0
margin_right = 510.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Button"

[node name="AssignButton" type="Button" parent="ScrollContainer/PropertyContainer/ButtonProperty" index="1"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/normal = ExtResource( 3 )

[node name="Control" type="Control" parent="." index="1"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="AssignDialog" type="ConfirmationDialog" parent="Control" index="0"]
margin_right = 200.0
margin_bottom = 70.0
popup_exclusive = true

[connection signal="pressed" from="ScrollContainer/PropertyContainer/ButtonProperty/AssignButton" to="." method="_on_AssignButton_pressed"]
[connection signal="confirmed" from="Control/AssignDialog" to="." method="_on_AssignDialog_confirmed"]
